# CellularAutomata

./: .clangd  CMakeLists.txt  LICENSE  README.md
.continue/prompts/: generic.prompt
cmake/: BuildUtils.cmake  FetchRaygui.cmake  FetchRaylib.cmake  FetchSpdlog.cmake  SetLanguageStandard.cmake
lib/: CMakeLists.txt
lib/Raylibs/: CMakeLists.txt  Raylibs.h
lib/UIFrame/: CMakeLists.txt
lib/UIFrame/tests/: CMakeLists.txt  UIFrameTest.cpp
lib/Window/: CMakeLists.txt  Window.cpp  Window.hpp
